	PR gold/12163 	* gold/archive.cc (Archive::Archive): Initialize new data member. 	(Archive::include_all_members): Return if archive has already been 	included. 	* gold/archive.h (Archive::include_all_members_): New data member.